[project]
name = "jtoolbox"
version = "0.1.0"
authors = [
  {name="Joshua Hammond", email="jhammond02@gmail.com"},
]
description="Shortcuts and utilities for things I often do"
readme="README.md"
requires-python=">=3.8"
license = {text = "MIT License"}
dependencies = ["matplotlib", "numpy", "pandas", "seaborn", "h5py"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/joshuaeh/jtoolbox"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
